--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,15 @@
   box-sizing: border-box;
 }
 
+.card-tam{
+  min-height: 480px !important;
+}
+
+.btn-position {
+  position: absolute;
+  bottom: 0;
+}
+
 html {
   font-family: sans-serif;
   line-height: 1.15;
